--- a/HW01.ipynb
+++ b/HW01.ipynb
@@ -2,10 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "890c1c3d",
+   "id": "39f80658",
    "metadata": {},
    "source": [
-    "Chatbot logs: https://chatgpt.com/share/53a1ac9c-03c2-4e07-8936-e95d5038e0af"
+    "### Chatbot logs: https://chatgpt.com/share/53a1ac9c-03c2-4e07-8936-e95d5038e0af"
    ]
   },
   {
@@ -1178,7 +1178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff36e983",
+   "id": "a82c92ce",
    "metadata": {},
    "source": [
     "1. Use your ChatBot session to understand what `df.groupby(\"col1\")[\"col2\"].describe()` does and then demonstrate and explain this using a different example from the \"titanic\" data set other than what the ChatBot automatically provide for you"
@@ -1305,7 +1305,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38be9ca9",
+   "id": "2e219cf3",
    "metadata": {},
    "source": [
     "2. Assuming you've not yet removed missing values in the manner of question \"7\" above, `df.describe()` would have different values in the `count` value for different data columns depending on the missingness present in the original data.  Why do these capture something fundamentally different from the values in the `count` that result from doing something like `df.groupby(\"col1\")[\"col2\"].describe()`?"
@@ -1313,7 +1313,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe95b772",
+   "id": "4d310a3f",
    "metadata": {},
    "source": [
     "The count in df.describe() gives a overview of all the values that aren't missing, while `df.groupby(\"col1\")[\"col2\"].describe()` breaks down the count within each group, offering a more detailed view of the data and the missingness patterns in each subgroups."
@@ -1321,7 +1321,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e099e27c",
+   "id": "ff1cda9c",
    "metadata": {},
    "source": [
     "3. Intentionally introduce the following errors into your code and report your opinion as to whether it's easier to (a) work in a ChatBot session to fix the errors, or (b) use google to search for and fix errors: first share the errors you get in the ChatBot session and see if you can work with ChatBot to troubleshoot and fix the coding errors, and then see if you think a google search for the error provides the necessary toubleshooting help more quickly than ChatGPT<br><br>\n",
@@ -1330,7 +1330,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31f86479",
+   "id": "960522e3",
    "metadata": {},
    "source": [
     "A. Chatbot B. Chatbot C. Chatbot D. Chatbot E. Chatbot F. Chatbot G. Chatbot\n",
@@ -1339,7 +1339,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "316fa99b",
+   "id": "50ca8f52",
    "metadata": {},
    "source": [
     "#### 9. Have you reviewed the course [wiki-textbook](https://github.com/pointOfive/stat130chat130/wiki) and interacted with a ChatBot (or, if that wasn't sufficient, real people in the course piazza discussion board or TA office hours) to help you understand all the material in the tutorial and lecture that you didn't quite follow when you first saw it?"
@@ -1348,7 +1348,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "c4668f57",
+   "id": "6c5654fd",
    "metadata": {},
    "outputs": [
     {
